# FFwrap

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  main.rs  probe.rs
src/components/: CommandPreview.jsx  DropZone.jsx  LogPanel.jsx
src/lib/: buildCommand.js  buildCommand.test.js
src/styles/: globals.css
